--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
             <div>
                 <a class="btn" href="platform-pvp.html">Open PvP Platform</a>
+                <a class="btn" href="randomcardpicker.html">Open Random Card Picker</a>
                 <a class="btn small" href="#" onclick="location.reload()">Refresh</a>
             </div>
         </div>
