--- a/index.html
+++ b/index.html
@@ -1,31 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Vibe Coded Project - Platforms</title>
-    <style>
-        html,body{height:100%;margin:0;font-family:Inter,Arial,Helvetica,sans-serif;background:linear-gradient(180deg,#0f172a,#020617);color:#e6eef8}
-        .center{height:100%;display:flex;align-items:center;justify-content:center}
-        .card{width:360px;padding:28px;border-radius:12px;background:rgba(255,255,255,0.03);box-shadow:0 8px 30px rgba(2,6,23,0.7);text-align:center}
-        h1{font-size:20px;margin:0 0 12px;color:#9be7ff}
-        p{color:#9aa9bf;font-size:14px;margin:0 0 18px}
-        .btn{display:inline-block;padding:12px 18px;margin:8px;border-radius:8px;background:#1f6feb;color:white;text-decoration:none;font-weight:600}
-        .small{background:transparent;border:1px solid rgba(255,255,255,0.06);color:#cfe9ff;font-size:13px}
-    </style>
-</head>
-<body>
-    <div class="center">
-        <div class="card">
-            <h1>Vibe Coded — Platforms</h1>
-            <p>Select a platform to open. This is a simple launcher for your platform pages.</p>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>NEON CIRCUIT — PLATFORM HUB</title>
 
-            <div>
-                <a class="btn" href="platform-pvp.html">Open PvP Platform</a>
-                <a class="btn" href="randomcardpicker.html">Open Random Card Picker</a>
-                <a class="btn small" href="#" onclick="location.reload()">Refresh</a>
-            </div>
-        </div>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Inter&display=swap" rel="stylesheet">
+
+<style>
+html, body {
+    height: 100%;
+    margin: 0;
+    font-family: Inter, Arial, sans-serif;
+    background: radial-gradient(circle at top, #0b1024, #020617);
+    color: #e5e7eb;
+}
+
+/* subtle scanlines */
+body::after {
+    content: "";
+    position: fixed;
+    inset: 0;
+    background: repeating-linear-gradient(
+        to bottom,
+        rgba(255,255,255,0.03),
+        rgba(255,255,255,0.03) 1px,
+        transparent 2px,
+        transparent 4px
+    );
+    pointer-events: none;
+    opacity: 0.08;
+}
+
+.center {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card {
+    width: 380px;
+    padding: 32px;
+    background: rgba(17, 22, 42, 0.85);
+    border: 1px solid #1b2140;
+    box-shadow:
+        0 0 25px rgba(0, 245, 255, 0.08),
+        0 0 60px rgba(255, 46, 209, 0.04);
+    text-align: center;
+    position: relative;
+}
+
+.card::before {
+    content: "";
+    position: absolute;
+    inset: -1px;
+    border: 1px solid rgba(0, 245, 255, 0.35);
+    pointer-events: none;
+}
+
+h1 {
+    font-family: Orbitron, sans-serif;
+    font-size: 18px;
+    letter-spacing: 0.1em;
+    margin: 0 0 10px;
+    color: #00f5ff;
+}
+
+p {
+    font-size: 13px;
+    color: #9ca3af;
+    margin: 0 0 22px;
+}
+
+.btn {
+    display: block;
+    margin: 10px 0;
+    padding: 14px;
+    font-family: Orbitron, sans-serif;
+    letter-spacing: 0.08em;
+    font-size: 12px;
+    text-decoration: none;
+    color: #00f5ff;
+    border: 1px solid #00f5ff;
+    background: transparent;
+    transition: all 0.18s ease-out;
+}
+
+.btn:hover {
+    box-shadow: 0 0 14px rgba(0, 245, 255, 0.6);
+    transform: translateY(-1px);
+}
+
+.btn.secondary {
+    color: #ff2ed1;
+    border-color: #ff2ed1;
+}
+
+.btn.secondary:hover {
+    box-shadow: 0 0 14px rgba(255, 46, 209, 0.6);
+}
+
+.small {
+    margin-top: 14px;
+    font-size: 11px;
+    color: #9ca3af;
+    border-color: #1b2140;
+}
+
+.small:hover {
+    box-shadow: 0 0 10px rgba(124, 58, 237, 0.5);
+    color: #7c3aed;
+}
+</style>
+</head>
+
+<body>
+<div class="center">
+    <div class="card">
+        <h1>NEON CIRCUIT</h1>
+        <p>SYSTEM READY. SELECT A MODULE TO JACK IN.</p>
+
+        <a class="btn" href="platform-pvp.html">JACK IN — PvP SECTOR</a>
+        <a class="btn secondary" href="randomcardpicker.html">ACCESS — RANDOM CARD NODE</a>
+        <a class="btn small" href="#" onclick="location.reload()">SYSTEM REFRESH</a>
     </div>
+</div>
 </body>
 </html>
