I don't even know if its a good game

--- a/index.html
+++ b/index.html
@@ -122,8 +122,9 @@ p {
         <p>SYSTEM READY. SELECT A MODULE TO JACK IN.</p>
 
         <a class="btn" href="platform-pvp.html">JACK IN — PvP SECTOR</a>
-        <a class="btn secondary" href="randomcardpicker.html">ACCESS — RANDOM CARD NODE</a>
-        <a class="btn small" href="#" onclick="location.reload()">SYSTEM REFRESH</a>
+        <a class="btn" href="randomcardpicker.html">ACCESS — RANDOM CARD NODE</a>
+        <a class="btn" href="Star-Sector.html">ENTER — STAR SECTOR SIMULATOR</a>
+        <a class="btn secondary" href="#" onclick="location.reload()">SYSTEM REFRESH</a>
     </div>
 </div>
 </body>
