--- a/Star-Sector.html
+++ b/Star-Sector.html
@@ -544,6 +544,7 @@
             </button>
             <button id="mainMenuBtn" class="btn-secondary w-48 border border-white p-2 text-white hover:bg-white hover:text-black transition" onclick="location.href='index.html'">
                 RETURN TO MAINFRAME
+            </button>
         </div>
     </div>
 
