--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ p {
         <a class="btn" href="platform-pvp.html">JACK IN — PvP SECTOR</a>
         <a class="btn" href="randomcardpicker.html">ACCESS — RANDOM CARD NODE</a>
         <a class="btn" href="Star-Sector.html">ENTER — STAR SECTOR SIMULATOR</a>
+        <a class="btn" href="resume-builder.html">ENTER — RESUME BUILDER</a>
         <a class="btn secondary" href="#" onclick="location.reload()">SYSTEM REFRESH</a>
     </div>
 </div>
